Fix misplaced scrollbar in navigation
- The layout block was not expanding to the full available width
  when positioned as 'absolute'

refs #26873

--- a/pub/static/themes/whitelabel/components/menu/_components.menu.scss
+++ b/pub/static/themes/whitelabel/components/menu/_components.menu.scss
@@ -75,6 +75,8 @@ $menu-size: 20rem !default;
     position: absolute;
     top: 0;
     bottom: 0;
+    right: 0;
+    left: 0;
     z-index: 1;
 
     > *:last-child::after {
